[gd_scene load_steps=4 format=3 uid="uid://bdaoc76ycy75l"]

[ext_resource type="Script" uid="uid://cgybfl0ewf2lr" path="res://main_menu_ui.gd" id="1_5p3a5"]
[ext_resource type="Theme" uid="uid://c5ssoldm0q78g" path="res://MainMenuUITheme.tres" id="2_0evo5"]
[ext_resource type="PackedScene" uid="uid://fjqw7l7fiakk" path="res://main_menu.tscn" id="3_0evo5"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -8.0
offset_top = -11.0
offset_right = -8.0
offset_bottom = -11.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5p3a5")

[node name="Play" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.43055555
anchor_top = 0.5598025
anchor_right = 0.6559029
anchor_bottom = 0.65588
offset_top = 0.24798584
offset_right = 0.39996338
offset_bottom = -0.010223389
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.72034526, 0.6494261)
theme = ExtResource("2_0evo5")
theme_override_font_sizes/font_size = 35
text = "Play"
metadata/_edit_use_anchors_ = true

[node name="Exit" type="Button" parent="Play"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.00909736
anchor_top = -0.11315229
anchor_right = 0.9980119
anchor_bottom = 0.8867586
offset_left = 2.3653135
offset_top = 80.01544
offset_right = -0.06616211
offset_bottom = 80.020966
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 35
text = "Exit"
metadata/_edit_use_anchors_ = true

[node name="Credits" type="Button" parent="Play/Exit"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.008742714
anchor_top = 1.2354249
anchor_right = 1.000285
anchor_bottom = 2.2449963
offset_top = 0.24798584
offset_bottom = 0.11193848
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 35
text = "Credits
"
metadata/_edit_use_anchors_ = true

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.30580208
anchor_top = 0.41203704
anchor_right = 0.72631603
anchor_bottom = 0.53198767
offset_left = -0.28401184
offset_right = 0.28399658
offset_bottom = 0.27198792
grow_horizontal = 2
theme_override_colors/font_color = Color(0.72156864, 0.4509804, 0.2, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 50
text = "Peasant Simulator"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Node2D" parent="." instance=ExtResource("3_0evo5")]
z_index = -1
position = Vector2(317, 569)

[connection signal="pressed" from="Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="Play" to="Play/Exit/Credits" method="_on_play_pressed"]
[connection signal="pressed" from="Play/Exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="Play/Exit" to="Play/Exit" method="_on_pressed"]
[connection signal="pressed" from="Play/Exit/Credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="Play/Exit/Credits" to="Play/Exit/Credits" method="_on_pressed"]
